# ruqqus-rust

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  schema.txt
ruqqus-core/: Cargo.toml
ruqqus-core/migrations/2020-06-23-071037_initial/: up.sql
ruqqus-core/src/: database.rs  error.rs  lib.rs  models.rs  schema.rs
ruqqus-core/src/store/: mod.rs
ruqqus-http/: Cargo.toml
ruqqus-http/src/: analytics.rs  data.rs  error.rs  lib.rs  main.rs  option.rs
ruqqus-http/src/routes/: comment.rs  guild.rs  mod.rs  post.rs  user.rs
scripts/docker/: initialize_db.sql  start_docker_ruqqus.sh
