[package]
name = "ruqqus-core"
version = "0.0.1"
license = "MIT"
authors = ["Pedro Paulo de Amorim <pepa.amorim@ruqqus.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
log = "0.4.8"

r2d2 = "0.8"
r2d2_postgres = "0.16.0"
postgres = { version = "0.17.2", features = ["with-chrono-0_4", "with-uuid-0_8"] }
uuid = { version = "0.8.1", features = ["v4"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"

[dev-dependencies]
assert_matches = "1.3.0"
criterion = "0.3.1"
csv = "1.1.3"
jemallocator = "0.3.2"
rustyline = { version = "6.0.0", default-features = false }
structopt = "0.3.12"
tempfile = "3.1.0"
termcolor = "1.1.0"
