[package]
name = "ruqqus-http"
description = "Ruqqus HTTP server"
version = "0.0.1"
license = "MIT"
authors = ["Pedro Paulo de Amorim <pepa.amorim@ruqqus.com>"]
edition = "2018"

[[bin]]
name = "ruqqus"
path = "src/main.rs"

[dependencies]
ruqqus-core = { path = "../ruqqus-core", version = "0.0.1" }
env_logger = "0.7.1"
futures = "0.3.4"
http = "0.1.19"
indexmap = { version = "1.3.2", features = ["serde-1"] }
log = "0.4.8"
main_error = "0.1.0"
mime = "0.3.16"
rand = "0.7.3"
rust-argon2 = "0.5"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = { version = "1.0.50", features = ["preserve_order"] }
serde_qs = "0.5.2"
chrono = { version = "0.4.11", features = ["serde"] }
sha2 = "0.8.1"
siphasher = "0.3.2"
structopt = "0.3.12"
sysinfo = "0.12.0"
ureq = { version = "0.12.0", features = ["tls"], default-features = false }
# walkdir = "2.3.1"
whoami = "0.8.1"
actix-rt = "1.1.1"
actix-web = "2"
actix-http = "1.0.1"
actix-cors = "0.2.0"
actix-service = "1.0.5"
actix-identity = "0.2.1"
tokio = { version = "0.2.18", features = ["macros"] }

[dev-dependencies]
http-service = "0.4.0"
http-service-mock = "0.4.0"
tempdir = "0.3.7"
tokio = { version = "0.2.18", features = ["macros", "time"] }

[dev-dependencies.assert-json-diff]
git = "https://github.com/qdequele/assert-json-diff"
branch = "master"

[build-dependencies]
vergen = "3.1.0"

[target.'cfg(unix)'.dependencies]
jemallocator = "0.3.2"
